Add Download Link

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <a href="#feature" class="nav-item nav-link">Features</a>
                         <a href="#pricing" class="nav-item nav-link">Pricing</a>
                     </div>
-                    <a href="" class="btn btn-primary-gradient rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Download for Free</a>
+                    <a href="https://play.google.com/store/apps/details?id=app.expensia.android" class="btn btn-primary-gradient rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Download for Free</a>
                 </div>
             </nav>
 
@@ -96,7 +96,7 @@
                         <div class="col-lg-8 text-center text-lg-start">
                             <h1 class="text-white mb-4 animated slideInDown">Master Your Finances with Ease! Track, Analyze, and Control Your Spending Like Never Before.</h1>
                             <p class="text-white pb-3 animated slideInDown">Say goodbye to financial guesswork—Expensia helps you log, track, and visualize your expenses effortlessly. Dive into interactive reports, unlock dark mode, and enjoy multi-language support in Arabic and English. Export your data, customize categories, and get timely reminders to stay on top of your spending habits!</p>
-                            <a href="" class="btn btn-primary-gradient py-sm-3 px-4 px-sm-5 rounded-pill me-3 animated slideInLeft">Download</a>
+                            <a href="https://play.google.com/store/apps/details?id=app.expensia.android" class="btn btn-primary-gradient py-sm-3 px-4 px-sm-5 rounded-pill me-3 animated slideInLeft">Download</a>
                         </div>
                         <div class="col-lg-4 d-flex justify-content-center justify-content-lg-end wow fadeInUp" data-wow-delay="0.3s">
                             <div class="owl-carousel screenshot-carousel">
@@ -274,7 +274,7 @@
 <!--                                </a>-->
 <!--                            </div>-->
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
-                                <a href="" class="d-flex bg-secondary-gradient rounded py-3 px-4">
+                                <a href="https://play.google.com/store/apps/details?id=app.expensia.android" class="d-flex bg-secondary-gradient rounded py-3 px-4">
                                     <i class="fab fa-android fa-3x text-white flex-shrink-0"></i>
                                     <div class="ms-3">
                                         <p class="text-white mb-0">Available On</p>
