Add Download Link

--- a/index.html
+++ b/index.html
@@ -375,8 +375,7 @@
                                         </div>
                                         <div class="p-4 pt-0">
                                             <h1 class="mb-3">
-                                                <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>70<small
-                                                    class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Yearly</small>
+                                                <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>70
                                             </h1>
                                             <div class="d-flex justify-content-between mb-3"><span>No Ads</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                             <div class="d-flex justify-content-between mb-3"><span>Export Reports</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
