--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-3">
                         <h4 class="text-white mb-4">Address</h4>
-                        <p><i class="fa fa-envelope me-3"></i>contact@yazantarifi.com</p>
+                        <p><i class="fa fa-envelope me-3"></i>contact.yazantarifi@gmail.com</p>
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <h4 class="text-white mb-4">Quick Link</h4>
